@@ -1,3 +1,12 @@
+ZEsarUX 11.1 - xxxx edition. 06 Junio 2024
+
+* Correcciones:
+
+Quitar indicador de buffer lleno al pulsar shift+e en ventana de Fuente de sonido externa
+
+----
+
+
 ZEsarUX 11.0 - David edition. 06 Junio 2024
 
 Esta versión está dedicada a mi hermano David. Descanse en paz.
