@@ -363,3 +363,5 @@ Y sin barra título
 el resto puede salir fuera -> comprobar al hacer print y putpixel que no sale fuera
 
 -Incorporar bittransfe como manera de generar snapshot en .tap. Agregar parámetro de estado interrupciones, registro i. Otros registros que falten? R? Problema que está guardando algunos registros en parte alta de la memoria y puede interferir con el stack si no se ha cambiado el CLEAR
+
+-Permitir left ctrl o left alt como boton de fire
